# apriltag2-rs

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  NOTICE.md  README.md
src/: lib.rs
tests/: tag36h11_detection.rs
